--- a/BE ISN/BE ISN/TroisiemeEtude/.classpath
+++ b/BE ISN/BE ISN/TroisiemeEtude/.classpath
@@ -6,8 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OpenCV"/>
-	<classpathentry kind="lib" path="C:/Users/Public/Documents/TPPanneaux/Candidat1/DeuxièmeEtude/Mabiblio.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/opencv"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OpenCv3.4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
