--- a/Projet twizy/.project
+++ b/Projet twizy/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Landscape-Color.jpg</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Downloads/Landscape-Color.jpg</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
